force-app/main/default/objects/FCST_Item_Info__c/FCST_Item_Info__c.object-meta.xml
<CustomObject>
    <description>Forecast Item data</description>
    <label>FCST Item Info</label>
    <nameField>
        <label>FCST Item Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Item Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>