force-app/main/default/objects/FCST_Item_Info__c/fields/CS_Exclusive__c.field-meta.xml
<CustomField>
    <fullName>CS_Exclusive__c</fullName>
    <label>CS Exclusive</label>
    <length>3</length>
    <type>Text</type>
</CustomField>