force-app/main/default/objects/FCST_Item_Info__c/fields/Dist_Type__c.field-meta.xml
<CustomField>
    <fullName>Dist_Type__c</fullName>
    <label>Dist Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>