force-app/main/default/objects/FCST_Item_Info__c/fields/External_ID_Num__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Num__c</fullName>
    <externalId>true</externalId>
    <label>External ID Num</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>