force-app/main/default/objects/FCST_Item_Info__c/fields/Item_8721_Stock__c.field-meta.xml
<CustomField>
    <fullName>Item_8721_Stock__c</fullName>
    <label>Item_8721_Stock</label>
    <length>3</length>
    <type>Text</type>
</CustomField>