force-app/main/default/objects/FCST_Item_Info__c/fields/Item_Num__c.field-meta.xml
<CustomField>
    <fullName>Item_Num__c</fullName>
    <label>Item Num</label>
    <length>30</length>
    <type>Text</type>
</CustomField>