force-app/main/default/objects/FCST_Item_Info__c/fields/Item_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Item_Ranking__c</fullName>
    <label>Item Ranking</label>
    <length>20</length>
    <type>Text</type>
</CustomField>