force-app/main/default/objects/FCST_Item_Info__c/fields/MDM_Item__c.field-meta.xml
<CustomField>
    <fullName>MDM_Item__c</fullName>
    <label>MDM Item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>