force-app/main/default/objects/FCST_Item_Info__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <length>5</length>
    <type>Text</type>
</CustomField>